--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "precommit": "lint-staged",
     "build": "webpack",
     "start": "webpack-dev-server"
+  },
+  "devDependencies": {
+    "babel-minify-webpack-plugin": "^0.2.0"
   }
 }
