--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "webpack-dev-server": "^2.9.7"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
+    "src/**/*.{js,json,css}": [
       "prettier --single-quote --write",
       "git add"
     ]
