--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "3",
     "html-webpack-plugin": "^2.30.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^6.0.0",
     "path": "^0.12.7",
-    "prettier": "^1.9.2",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
@@ -26,6 +23,9 @@
     "src/**/*.{js,json,css}": [
       "prettier --single-quote --write",
       "git add"
+    ],
+    "yarn.lock": [
+      "git rm --cached"
     ]
   },
   "scripts": {
@@ -34,6 +34,9 @@
     "start": "webpack-dev-server"
   },
   "devDependencies": {
+    "prettier": "^1.9.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.0.0",
     "babel-minify-webpack-plugin": "^0.2.0"
   }
 }
